# Jus-api

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  pyproject.toml  teste.py
core/: settings.py
scraper/: a.html  scraper.py
scraper/data/: law.html
scraper/utils/: functions.py
src/: main.py  manage.py
src/api/: models.py  urls.py
src/api/migrations/: 0001_initial.py  0002_alter_paragraph_id_article.py
src/core/: docker_run.py  settings.py  urls.py
src/core/docker/: Dockerfile  docker_run.py
