[project]
name = "jus-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=5.2.8",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "langchain>=1.0.8",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
]

[tool.ruff.format]
quote-style = "single"

[tool.ruff]
line-length = 120

[tool.basedpyright]
